lib/video_probe_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/video_probe.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class VideoProbeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  VideoProbeBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  VideoProbeBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// A dummy function to test FFI integration
  int sum(int a, int b) {
    return _sum(a, b);
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.IntPtr, ffi.IntPtr)>>(
        'sum',
      );
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  /// Returns the duration of the video in seconds.
  /// Returns -1.0 on error.
  double get_duration(ffi.Pointer<ffi.Char> path) {
    return _get_duration(path);
  }

  late final _get_durationPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<ffi.Char>)>>(
        'get_duration',
      );
  late final _get_duration = _get_durationPtr
      .asFunction<double Function(ffi.Pointer<ffi.Char>)>();

  /// Returns the total number of frames in the video.
  /// Returns -1 on error.
  int get_frame_count(ffi.Pointer<ffi.Char> path) {
    return _get_frame_count(path);
  }

  late final _get_frame_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'get_frame_count',
      );
  late final _get_frame_count = _get_frame_countPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Extracts a specific frame as a JPG/PNG buffer.
  /// Returns a pointer to the buffer. The caller is responsible for freeing it using free_frame().
  /// Sets *outSize to the size of the buffer.
  /// Returns NULL on error.
  ffi.Pointer<ffi.Uint8> extract_frame(
    ffi.Pointer<ffi.Char> path,
    int frameNum,
    ffi.Pointer<ffi.Int> outSize,
  ) {
    return _extract_frame(path, frameNum, outSize);
  }

  late final _extract_framePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('extract_frame');
  late final _extract_frame = _extract_framePtr
      .asFunction<
        ffi.Pointer<ffi.Uint8> Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Int>,
        )
      >();

  /// Frees the buffer returned by extract_frame.
  void free_frame(ffi.Pointer<ffi.Uint8> buffer) {
    return _free_frame(buffer);
  }

  late final _free_framePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
        'free_frame',
      );
  late final _free_frame = _free_framePtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();
}
